tests/NormalTests/paczka1/fuzzy1/62791323.err
Error in line 2: Lvjm8i2 A251 52,9
Error in line 7: Lvjm8i2 A600 85,0
Error in line 13: ek9LAxJY S987 90,0
Error in line 34: 0j4h3T A251 306,16
Error in line 31: 0j4h3T A251 95,5
